--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ahmed-ayad-cyber.github.io/my-web-sit",
+  "homepage": "https://ahmed-ayad-cyber.github.io/my-page",
   "name": "ahmed",
   "version": "0.1.0",
   "private": true,
